# ollama

./: .gitignore  CLAUDE.md  README.md  ollama-llama-notes.md
.claude/: settings.local.json
api/: types.go
cmd/: cmd.go
daop/: cloud.go  config.go  config_test.go  gate.go  gate_test.go  probe.go  probe_batch_extract_test.go  probe_compare_test.go  probe_model.go  probe_model_bench_test.go  probe_model_test.go  router.go  router_test.go  scorer.go  scorer_test.go  subtask_classifier.go  subtask_classifier_test.go  types.go
discover/: runner.go
docs/: TODO.md  debugging-and-profiling.md  qwen3-cpu-offload-lock-analysis.md  threading-analysis-report.md  tracing-and-scheduler-internals.md
envconfig/: config.go
graphify-out/: GRAPH_REPORT.md  cost.json  manifest.json
llama/: llama.go  profiler_bridge.go  timing_bridge.go
llm/: server.go
ml/: backend.go
perf/: adaptive.go  adaptive_test.go  assign_backend_test.go  bench.go  bench_gpu_test.go  bench_integration_test.go  bench_overhead_test.go  bench_test.go  cmd.go  cmd_test.go  common.go  common_test.go  direct_compute_test.go  dtype_map.go  dtype_map_test.go  estimate.go  estimate_test.go  fusion.go  (+28 more)
scripts/cuda-overlap-bench/: CMakeLists.txt  README.md  cuda_hostregister_bench.cu  cuda_overlap_bench.cu
tools/trace-analyzer/: README.md  RELEASE-README.md  build-release.ps1  pyproject.toml
tools/trace-analyzer/tests/: test_compare.py  test_dag.py  test_parser.py  test_perfetto.py  test_report.py  test_summary.py
tools/trace-analyzer/tests/fixtures/: sample_trace.jsonl
tools/trace-analyzer/trace_analyzer/: __main__.py  cli.py  compare.py  dag.py  parser.py  perfetto.py  report.py  serve.py  summary.py
tools/trace-analyzer/trace_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/trace-analyzer/trace_analyzer/templates/: compare_report.md.j2  single_report.md.j2
tools/trace-analyzer/web/: index.html  package-lock.json  package.json
tools/trace-analyzer/web/src/: App.tsx
tools/trace-analyzer/web/src/__tests__/: ReplayController.test.ts
tools/trace-analyzer/web/src/components/: ColorToggle.tsx  CompareView.tsx  DagView.tsx  HeatmapHistogram.tsx  HotspotPanel.tsx  NodeDetail.tsx  ReplayPanel.tsx  TimelineView.tsx
tools/trace-analyzer/web/src/hooks/: useTraceData.ts
tools/trace-analyzer/web/src/types/: trace.ts
tools/trace-analyzer/web/src/utils/: ReplayController.ts  colorScale.ts  dagLayout.ts  dataSize.ts  treeCompoundLayout.ts
(+141 files in other folders)
